src/nl/cwi/swat/liveql/parser/antlr/QLParser.java
// $ANTLR 3.5.2 src/nl/cwi/swat/liveql/parser/antlr/QL.g 2020-10-15 17:48:40

package nl.cwi.swat.liveql.parser.antlr;
import nl.cwi.swat.liveql.ast.expr.*;
import nl.cwi.swat.liveql.ast.stat.*;
import nl.cwi.swat.liveql.ast.form.*;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;
import java.util.Map;
import java.util.HashMap;

import org.antlr.runtime.tree.*;


@SuppressWarnings("all")
public class QLParser extends Parser {
	public static final String[] tokenNames = new String[] {
		"<invalid>", "<EOR>", "<DOWN>", "<UP>", "COMMENT", "Ident", "Int", "Str", 
		"WS", "'!'", "'!='", "'&&'", "'('", "')'", "'*'", "'+'", "'-'", "'/'", 
		"':'", "'<'", "'<='", "'=='", "'>'", "'>='", "'bool'", "'else'", "'false'", 
		"'form'", "'if'", "'int'", "'str'", "'true'", "'{'", "'||'", "'}'"
	};
	public static final int EOF=-1;
	public static final int T__9=9;
	public static final int T__10=10;
	public static final int T__11=11;
	public static final int T__12=12;
	public static final int T__13=13;
	public static final int T__14=14;
	public static final int T__15=15;
	public static final int T__16=16;
	public static final int T__17=17;
	public static final int T__18=18;
	public static final int T__19=19;
	public static final int T__20=20;
	public static final int T__21=21;
	public static final int T__22=22;
	public static final int T__23=23;
	public static final int T__24=24;
	public static final int T__25=25;
	public static final int T__26=26;
	public static final int T__27=27;
	public static final int T__28=28;
	public static final int T__29=29;
	public static final int T__30=30;
	public static final int T__31=31;
	public static final int T__32=32;
	public static final int T__33=33;
	public static final int T__34=34;
	public static final int COMMENT=4;
	public static final int Ident=5;
	public static final int Int=6;
	public static final int Str=7;
	public static final int WS=8;

	// delegates
	public Parser[] getDelegates() {
		return new Parser[] {};
	}

	// delegators


	public QLParser(TokenStream input) {
		this(input, new RecognizerSharedState());
	}
	public QLParser(TokenStream input, RecognizerSharedState state) {
		super(input, state);
		this.state.ruleMemo = new HashMap[40+1];


	}

	protected TreeAdaptor adaptor = new CommonTreeAdaptor();

	public void setTreeAdaptor(TreeAdaptor adaptor) {
		this.adaptor = adaptor;
	}
	public TreeAdaptor getTreeAdaptor() {
		return adaptor;
	}
	@Override public String[] getTokenNames() { return QLParser.tokenNames; }
	@Override public String getGrammarFileName() { return "src/nl/cwi/swat/liveql/parser/antlr/QL.g"; }


	    @Override
	    public void reportError(RecognitionException e) {
	        throw new RuntimeException(e);
	    }


	public static class form_return extends ParserRuleReturnScope {
		public Form result;
		CommonTree tree;
		@Override
		public CommonTree getTree() { return tree; }
	};


	// $ANTLR start "form"
	// src/nl/cwi/swat/liveql/parser/antlr/QL.g:25:1: form returns [Form result] : 'form' Ident body= block ;
	public final QLParser.form_return form() throws RecognitionException {
		QLParser.form_return retval = new QLParser.form_return();
		retval.start = input.LT(1);
		int form_StartIndex = input.index();

		CommonTree root_0 = null;

		Token string_literal1=null;
		Token Ident2=null;
		ParserRuleReturnScope body =null;

		CommonTree string_literal1_tree=null;
		CommonTree Ident2_tree=null;

		try {
			if ( state.backtracking>0 && alreadyParsedRule(input, 1) ) { return retval; }

			// src/nl/cwi/swat/liveql/parser/antlr/QL.g:26:3: ( 'form' Ident body= block )
			// src/nl/cwi/swat/liveql/parser/antlr/QL.g:26:5: 'form' Ident body= block
			{
			root_0 = (CommonTree)adaptor.nil();


			string_literal1=(Token)match(input,27,FOLLOW_27_in_form66); if (state.failed) return retval;
			if ( state.backtracking==0 ) {
			string_literal1_tree = (CommonTree)adaptor.create(string_literal1);
			adaptor.addChild(root_0, string_literal1_tree);
			}

			Ident2=(Token)match(input,Ident,FOLLOW_Ident_in_form68); if (state.failed) return retval;
			if ( state.backtracking==0 ) {
			Ident2_tree = (CommonTree)adaptor.create(Ident2);
			adaptor.addChild(root_0, Ident2_tree);
			}

			pushFollow(FOLLOW_block_in_form72);
			body=block();
			state._fsp--;
			if (state.failed) return retval;
			if ( state.backtracking==0 ) adaptor.addChild(root_0, body.getTree());

			if ( state.backtracking==0 ) { retval.result = new Form(new Ident((Ident2!=null?Ident2.getText():null), Ident2.getLine()), (body!=null?((QLParser.block_return)body).result:null)); }
			}

			retval.stop = input.LT(-1);

			if ( state.backtracking==0 ) {
			retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
			}
		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
			if ( state.backtracking>0 ) { memoize(input, 1, form_StartIndex); }

		}
		return retval;
	}
	// $ANTLR end "form"


	public static class block_return extends ParserRuleReturnScope {
		public Block result;
		CommonTree tree;
		@Override
		public CommonTree getTree() { return tree; }
	};


	// $ANTLR start "block"
	// src/nl/cwi/swat/liveql/parser/antlr/QL.g:29:1: block returns [Block result] : t= '{' (s= stat )* '}' ;
	public final QLParser.block_return block() throws RecognitionException {
		QLParser.block_return retval = new QLParser.block_return();
		retval.start = input.LT(1);
		int block_StartIndex = input.index();

		CommonTree root_0 = null;

		Token t=null;
		Token char_literal3=null;
		ParserRuleReturnScope s =null;

		CommonTree t_tree=null;
		CommonTree char_literal3_tree=null;

		 List<Stat> stats = new ArrayList<Stat>(); 
		try {
			if ( state.backtracking>0 && alreadyParsedRule(input, 2) ) { return retval; }

			// src/nl/cwi/swat/liveql/parser/antlr/QL.g:31:3: (t= '{' (s= stat )* '}' )
			// src/nl/cwi/swat/liveql/parser/antlr/QL.g:31:5: t= '{' (s= stat )* '}'
			{
			root_0 = (CommonTree)adaptor.nil();


			t=(Token)match(input,32,FOLLOW_32_in_block100); if (state.failed) return retval;
			if ( state.backtracking==0 ) {
			t_tree = (CommonTree)adaptor.create(t);
			adaptor.addChild(root_0, t_tree);
			}

			// src/nl/cwi/swat/liveql/parser/antlr/QL.g:31:11: (s= stat )*
			loop1:
			while (true) {
				int alt1=2;
				int LA1_0 = input.LA(1);
				if ( (LA1_0==Str||LA1_0==28||LA1_0==32) ) {
					alt1=1;
				}

				switch (alt1) {
				case 1 :
					// src/nl/cwi/swat/liveql/parser/antlr/QL.g:31:13: s= stat
					{
					pushFollow(FOLLOW_stat_in_block106);
					s=stat();
					state._fsp--;
					if (state.failed) return retval;
					if ( state.backtracking==0 ) adaptor.addChild(root_0, s.getTree());

					if ( state.backtracking==0 ) { stats.add((s!=null?((QLParser.stat_return)s).result:null)); }
					}
					break;

				default :
					break loop1;
				}
			}

			char_literal3=(Token)match(input,34,FOLLOW_34_in_block113); if (state.failed) return retval;
			if ( state.backtracking==0 ) {
			char_literal3_tree = (CommonTree)adaptor.create(char_literal3);
			adaptor.addChild(root_0, char_literal3_tree);
			}

			if ( state.backtracking==0 ) { retval.result = new Block(stats, t.getLine()); }
			}

			retval.stop = input.LT(-1);

			if ( state.backtracking==0 ) {
			retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
			}
		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
			if ( state.backtracking>0 ) { memoize(input, 2, block_StartIndex); }

		}
		return retval;
	}
	// $ANTLR end "block"


	public static class stat_return extends ParserRuleReturnScope {
		public Stat result;
		CommonTree tree;
		@Override
		public CommonTree getTree() { return tree; }
	};


	// $ANTLR start "stat"
	// src/nl/cwi/swat/liveql/parser/antlr/QL.g:34:1: stat returns [Stat result] : ( 'if' '(' c= orExpr ')' tru= stat 'else' fls= stat | 'if' '(' c= orExpr ')' tru= stat |b= block |l= label name= Ident ':' t= type '(' e= orExpr ')' |l= label name= Ident ':' t= type );
	public final QLParser.stat_return stat() throws RecognitionException {
		QLParser.stat_return retval = new QLParser.stat_return();
		retval.start = input.LT(1);
		int stat_StartIndex = input.index();

		CommonTree root_0 = null;

		Token name=null;
		Token string_literal4=null;
		Token char_literal5=null;
		Token char_literal6=null;
		Token string_literal7=null;
		Token string_literal8=null;
		Token char_literal9=null;
		Token char_literal10=null;
		Token char_literal11=null;
		Token char_literal12=null;
		Token char_literal13=null;
		Token char_literal14=null;
		ParserRuleReturnScope c =null;
		ParserRuleReturnScope tru =null;
		ParserRuleReturnScope fls =null;
		ParserRuleReturnScope b =null;
		ParserRuleReturnScope l =null;
		ParserRuleReturnScope t =null;
		ParserRuleReturnScope e =null;

		CommonTree name_tree=null;
		CommonTree string_literal4_tree=null;
		CommonTree char_literal5_tree=null;
		CommonTree char_literal6_tree=null;
		CommonTree string_literal7_tree=null;
		CommonTree string_literal8_tree=null;
		CommonTree char_literal9_tree=null;
		CommonTree char_literal10_tree=null;
		CommonTree char_literal11_tree=null;
		CommonTree char_literal12_tree=null;
		CommonTree char_literal13_tree=null;
		CommonTree char_literal14_tree=null;

		try {
			if ( state.backtracking>0 && alreadyParsedRule(input, 3) ) { return retval; }

			// src/nl/cwi/swat/liveql/parser/antlr/QL.g:35:3: ( 'if' '(' c= orExpr ')' tru= stat 'else' fls= stat | 'if' '(' c= orExpr ')' tru= stat |b= block |l= label name= Ident ':' t= type '(' e= orExpr ')' |l= label name= Ident ':' t= type )
			int alt2=5;
			switch ( input.LA(1) ) {
			case 28:
				{
				int LA2_1 = input.LA(2);
				if ( (synpred2_QL()) ) {
					alt2=1;
				}
				else if ( (synpred3_QL()) ) {
					alt2=2;
				}

				else {
					if (state.backtracking>0) {state.failed=true; return retval;}
					int nvaeMark = input.mark();
					try {
						input.consume();
						NoViableAltException nvae =
							new NoViableAltException("", 2, 1, input);
						throw nvae;
					} finally {
						input.rewind(nvaeMark);
					}
				}

				}
				break;
			case 32:
				{
				alt2=3;
				}
				break;
			case Str:
				{
				int LA2_3 = input.LA(2);
				if ( (synpred5_QL()) ) {
					alt2=4;
				}
				else if ( (true) ) {
					alt2=5;
				}

				}
				break;
			default:
				if (state.backtracking>0) {state.failed=true; return retval;}
				NoViableAltException nvae =
					new NoViableAltException("", 2, 0, input);
				throw nvae;
			}
			switch (alt2) {
				case 1 :
					// src/nl/cwi/swat/liveql/parser/antlr/QL.g:35:5: 'if' '(' c= orExpr ')' tru= stat 'else' fls= stat
					{
					root_0 = (CommonTree)adaptor.nil();


					string_literal4=(Token)match(input,28,FOLLOW_28_in_stat134); if (state.failed) return retval;
					if ( state.backtracking==0 ) {
					string_literal4_tree = (CommonTree)adaptor.create(string_literal4);
					adaptor.addChild(root_0, string_literal4_tree);
					}

					char_literal5=(Token)match(input,12,FOLLOW_12_in_stat136); if (state.failed) return retval;
					if ( state.backtracking==0 ) {
					char_literal5_tree = (CommonTree)adaptor.create(char_literal5);
					adaptor.addChild(root_0, char_literal5_tree);
					}

					pushFollow(FOLLOW_orExpr_in_stat140);
					c=orExpr();
					state._fsp--;
					if (state.failed) return retval;
					if ( state.backtracking==0 ) adaptor.addChild(root_0, c.getTree());

					char_literal6=(Token)match(input,13,FOLLOW_13_in_stat142); if (state.failed) return retval;
					if ( state.backtracking==0 ) {
					char_literal6_tree = (CommonTree)adaptor.create(char_literal6);
					adaptor.addChild(root_0, char_literal6_tree);
					}

					pushFollow(FOLLOW_stat_in_stat146);
					tru=stat();
					state._fsp--;
					if (state.failed) return retval;
					if ( state.backtracking==0 ) adaptor.addChild(root_0, tru.getTree());

					string_literal7=(Token)match(input,25,FOLLOW_25_in_stat148); if (state.failed) return retval;
					if ( state.backtracking==0 ) {
					string_literal7_tree = (CommonTree)adaptor.create(string_literal7);
					adaptor.addChild(root_0, string_literal7_tree);
					}

					pushFollow(FOLLOW_stat_in_stat152);
					fls=stat();
					state._fsp--;
					if (state.failed) return retval;
					if ( state.backtracking==0 ) adaptor.addChild(root_0, fls.getTree());

					if ( state.backtracking==0 ) { retval.result = new IfThenElse((c!=null?((QLParser.orExpr_return)c).result:null), (tru!=null?((QLParser.stat_return)tru).result:null), (fls!=null?((QLParser.stat_return)fls).result:null)); }
					}
					break;
				case 2 :
					// src/nl/cwi/swat/liveql/parser/antlr/QL.g:36:5: 'if' '(' c= orExpr ')' tru= stat
					{
					root_0 = (CommonTree)adaptor.nil();


					string_literal8=(Token)match(input,28,FOLLOW_28_in_stat160); if (state.failed) return retval;
					if ( state.backtracking==0 ) {
					string_literal8_tree = (CommonTree)adaptor.create(string_literal8);
					adaptor.addChild(root_0, string_literal8_tree);
					}

					char_literal9=(Token)match(input,12,FOLLOW_12_in_stat162); if (state.failed) return retval;
					if ( state.backtracking==0 ) {
					char_literal9_tree = (CommonTree)adaptor.create(char_literal9);
					adaptor.addChild(root_0, char_literal9_tree);
					}

					pushFollow(FOLLOW_orExpr_in_stat166);
					c=orExpr();
					state._fsp--;
					if (state.failed) return retval;
					if ( state.backtracking==0 ) adaptor.addChild(root_0, c.getTree());

					char_literal10=(Token)match(input,13,FOLLOW_13_in_stat168); if (state.failed) return retval;
					if ( state.backtracking==0 ) {
					char_literal10_tree = (CommonTree)adaptor.create(char_literal10);
					adaptor.addChild(root_0, char_literal10_tree);
					}

					pushFollow(FOLLOW_stat_in_stat172);
					tru=stat();
					state._fsp--;
					if (state.failed) return retval;
					if ( state.backtracking==0 ) adaptor.addChild(root_0, tru.getTree());

					if ( state.backtracking==0 ) { retval.result = new IfThen((c!=null?((QLParser.orExpr_return)c).result:null), (tru!=null?((QLParser.stat_return)tru).result:null)); }
					}
					break;
				case 3 :
					// src/nl/cwi/swat/liveql/parser/antlr/QL.g:37:5: b= block
					{
					root_0 = (CommonTree)adaptor.nil();


					pushFollow(FOLLOW_block_in_stat182);
					b=block();
					state._fsp--;
					if (state.failed) return retval;
					if ( state.backtracking==0 ) adaptor.addChild(root_0, b.getTree());

					if ( state.backtracking==0 ) { retval.result = (b!=null?((QLParser.block_return)b).result:null); }
					}
					break;
				case 4 :
					// src/nl/cwi/swat/liveql/parser/antlr/QL.g:38:5: l= label name= Ident ':' t= type '(' e= orExpr ')'
					{
					root_0 = (CommonTree)adaptor.nil();


					pushFollow(FOLLOW_label_in_stat192);
					l=label();
					state._fsp--;
					if (state.failed) return retval;
					if ( state.backtracking==0 ) adaptor.addChild(root_0, l.getTree());

					name=(Token)match(input,Ident,FOLLOW_Ident_in_stat196); if (state.failed) return retval;
					if ( state.backtracking==0 ) {
					name_tree = (CommonTree)adaptor.create(name);
					adaptor.addChild(root_0, name_tree);
					}

					char_literal11=(Token)match(input,18,FOLLOW_18_in_stat198); if (state.failed) return retval;
					if ( state.backtracking==0 ) {
					char_literal11_tree = (CommonTree)adaptor.create(char_literal11);
					adaptor.addChild(root_0, char_literal11_tree);
					}

					pushFollow(FOLLOW_type_in_stat202);
					t=type();
					state._fsp--;
					if (state.failed) return retval;
					if ( state.backtracking==0 ) adaptor.addChild(root_0, t.getTree());

					char_literal12=(Token)match(input,12,FOLLOW_12_in_stat204); if (state.failed) return retval;
					if ( state.backtracking==0 ) {
					char_literal12_tree = (CommonTree)adaptor.create(char_literal12);
					adaptor.addChild(root_0, char_literal12_tree);
					}

					pushFollow(FOLLOW_orExpr_in_stat208);
					e=orExpr();
					state._fsp--;
					if (state.failed) return retval;
					if ( state.backtracking==0 ) adaptor.addChild(root_0, e.getTree());

					char_literal13=(Token)match(input,13,FOLLOW_13_in_stat210); if (state.failed) return retval;
					if ( state.backtracking==0 ) {
					char_literal13_tree = (CommonTree)adaptor.create(char_literal13);
					adaptor.addChild(root_0, char_literal13_tree);
					}

					if ( state.backtracking==0 ) { retval.result = new Computed((l!=null?((QLParser.label_return)l).result:null), new Ident((name!=null?name.getText():null), name.getLine()), (t!=null?((QLParser.type_return)t).result:null), (e!=null?((QLParser.orExpr_return)e).result:null)); }
					}
					break;
				case 5 :
					// src/nl/cwi/swat/liveql/parser/antlr/QL.g:39:5: l= label name= Ident ':' t= type
					{
					root_0 = (CommonTree)adaptor.nil();


					pushFollow(FOLLOW_label_in_stat220);
					l=label();
					state._fsp--;
					if (state.failed) return retval;
					if ( state.backtracking==0 ) adaptor.addChild(root_0, l.getTree());

					name=(Token)match(input,Ident,FOLLOW_Ident_in_stat224); if (state.failed) return retval;
					if ( state.backtracking==0 ) {
					name_tree = (CommonTree)adaptor.create(name);
					adaptor.addChild(root_0, name_tree);
					}

					char_literal14=(Token)match(input,18,FOLLOW_18_in_stat226); if (state.failed) return retval;
					if ( state.backtracking==0 ) {
					char_literal14_tree = (CommonTree)adaptor.create(char_literal14);
					adaptor.addChild(root_0, char_literal14_tree);
					}

					pushFollow(FOLLOW_type_in_stat230);
					t=type();
					state._fsp--;
					if (state.failed) return retval;
					if ( state.backtracking==0 ) adaptor.addChild(root_0, t.getTree());

					if ( state.backtracking==0 ) { retval.result = new Answerable((l!=null?((QLParser.label_return)l).result:null), new Ident((name!=null?name.getText():null), name.getLine()), (t!=null?((QLParser.type_return)t).result:null)); }
					}
					break;

			}
			retval.stop = input.LT(-1);

			if ( state.backtracking==0 ) {
			retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
			}
		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
			if ( state.backtracking>0 ) { memoize(input, 3, stat_StartIndex); }

		}
		return retval;
	}
	// $ANTLR end "stat"


	public static class label_return extends ParserRuleReturnScope {
		public Label result;
		CommonTree tree;
		@Override
		public CommonTree getTree() { return tree; }
	};


	// $ANTLR start "label"
	// src/nl/cwi/swat/liveql/parser/antlr/QL.g:42:1: label returns [Label result] : Str ;
	public final QLParser.label_return label() throws RecognitionException {
		QLParser.label_return retval = new QLParser.label_return();
		retval.start = input.LT(1);
		int label_StartIndex = input.index();

		CommonTree root_0 = null;

		Token Str15=null;

		CommonTree Str15_tree=null;

		try {
			if ( state.backtracking>0 && alreadyParsedRule(input, 4) ) { return retval; }

			// src/nl/cwi/swat/liveql/parser/antlr/QL.g:43:3: ( Str )
			// src/nl/cwi/swat/liveql/parser/antlr/QL.g:43:5: Str
			{
			root_0 = (CommonTree)adaptor.nil();


			Str15=(Token)match(input,Str,FOLLOW_Str_in_label252); if (state.failed) return retval;
			if ( state.backtracking==0 ) {
			Str15_tree = (CommonTree)adaptor.create(Str15);
			adaptor.addChild(root_0, Str15_tree);
			}

			if ( state.backtracking==0 ) { retval.result = new Label((Str15!=null?Str15.getText():null), Str15.getLine()); }
			}

			retval.stop = input.LT(-1);

			if ( state.backtracking==0 ) {
			retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
			}
		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
			if ( state.backtracking>0 ) { memoize(input, 4, label_StartIndex); }

		}
		return retval;
	}
	// $ANTLR end "label"


	public static class type_return extends ParserRuleReturnScope {
		public nl.cwi.swat.liveql.ast.types.Type result;
		CommonTree tree;
		@Override
		public CommonTree getTree() { return tree; }
	};


	// $ANTLR start "type"
	// src/nl/cwi/swat/liveql/parser/antlr/QL.g:46:1: type returns [nl.cwi.swat.liveql.ast.types.Type result] : (t= 'int' |t= 'str' |t= 'bool' );
	public final QLParser.type_return type() throws RecognitionException {
		QLParser.type_return retval = new QLParser.type_return();
		retval.start = input.LT(1);
		int type_StartIndex = input.index();

		CommonTree root_0 = null;

		Token t=null;

		CommonTree t_tree=null;

		try {
			if ( state.backtracking>0 && alreadyParsedRule(input, 5) ) { return retval; }

			// src/nl/cwi/swat/liveql/parser/antlr/QL.g:47:3: (t= 'int' |t= 'str' |t= 'bool' )
			int alt3=3;
			switch ( input.LA(1) ) {
			case 29:
				{
				alt3=1;
				}
				break;
			case 30:
				{
				alt3=2;
				}
				break;
			case 24:
				{
				alt3=3;
				}
				break;
			default:
				if (state.backtracking>0) {state.failed=true; return retval;}
				NoViableAltException nvae =
					new NoViableAltException("", 3, 0, input);
				throw nvae;
			}
			switch (alt3) {
				case 1 :
					// src/nl/cwi/swat/liveql/parser/antlr/QL.g:47:5: t= 'int'
					{
					root_0 = (CommonTree)adaptor.nil();


					t=(Token)match(input,29,FOLLOW_29_in_type275); if (state.failed) return retval;
					if ( state.backtracking==0 ) {
					t_tree = (CommonTree)adaptor.create(t);
					adaptor.addChild(root_0, t_tree);
					}

					if ( state.backtracking==0 ) { retval.result = new nl.cwi.swat.liveql.ast.types.Int(t.getLine()); }
					}
					break;
				case 2 :
					// src/nl/cwi/swat/liveql/parser/antlr/QL.g:48:5: t= 'str'
					{
					root_0 = (CommonTree)adaptor.nil();


					t=(Token)match(input,30,FOLLOW_30_in_type285); if (state.failed) return retval;
					if ( state.backtracking==0 ) {
					t_tree = (CommonTree)adaptor.create(t);
					adaptor.addChild(root_0, t_tree);
					}

					if ( state.backtracking==0 ) { retval.result = new nl.cwi.swat.liveql.ast.types.Str(t.getLine()); }
					}
					break;
				case 3 :
					// src/nl/cwi/swat/liveql/parser/antlr/QL.g:49:5: t= 'bool'
					{
					root_0 = (CommonTree)adaptor.nil();


					t=(Token)match(input,24,FOLLOW_24_in_type295); if (state.failed) return retval;
					if ( state.backtracking==0 ) {
					t_tree = (CommonTree)adaptor.create(t);
					adaptor.addChild(root_0, t_tree);
					}

					if ( state.backtracking==0 ) { retval.result = new nl.cwi.swat.liveql.ast.types.Bool(t.getLine()); }
					}
					break;

			}
			retval.stop = input.LT(-1);

			if ( state.backtracking==0 ) {
			retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
			}
		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
			if ( state.backtracking>0 ) { memoize(input, 5, type_StartIndex); }

		}
		return retval;
	}
	// $ANTLR end "type"


	public static class primary_return extends ParserRuleReturnScope {
		public Expr result;
		CommonTree tree;
		@Override
		public CommonTree getTree() { return tree; }
	};


	// $ANTLR start "primary"
	// src/nl/cwi/swat/liveql/parser/antlr/QL.g:52:1: primary returns [Expr result] : ( Int | Ident | Str | bool | '(' x= orExpr ')' );
	public final QLParser.primary_return primary() throws RecognitionException {
		QLParser.primary_return retval = new QLParser.primary_return();
		retval.start = input.LT(1);
		int primary_StartIndex = input.index();

		CommonTree root_0 = null;

		Token Int16=null;
		Token Ident17=null;
		Token Str18=null;
		Token char_literal20=null;
		Token char_literal21=null;
		ParserRuleReturnScope x =null;
		ParserRuleReturnScope bool19 =null;

		CommonTree Int16_tree=null;
		CommonTree Ident17_tree=null;
		CommonTree Str18_tree=null;
		CommonTree char_literal20_tree=null;
		CommonTree char_literal21_tree=null;

		try {
			if ( state.backtracking>0 && alreadyParsedRule(input, 6) ) { return retval; }

			// src/nl/cwi/swat/liveql/parser/antlr/QL.g:53:3: ( Int | Ident | Str | bool | '(' x= orExpr ')' )
			int alt4=5;
			switch ( input.LA(1) ) {
			case Int:
				{
				alt4=1;
				}
				break;
			case Ident:
				{
				alt4=2;
				}
				break;
			case Str:
				{
				alt4=3;
				}
				break;
			case 26:
			case 31:
				{
				alt4=4;
				}
				break;
			case 12:
				{
				alt4=5;
				}
				break;
			default:
				if (state.backtracking>0) {state.failed=true; return retval;}
				NoViableAltException nvae =
					new NoViableAltException("", 4, 0, input);
				throw nvae;
			}
			switch (alt4) {
				case 1 :
					// src/nl/cwi/swat/liveql/parser/antlr/QL.g:53:5: Int
					{
					root_0 = (CommonTree)adaptor.nil();


					Int16=(Token)match(input,Int,FOLLOW_Int_in_primary316); if (state.failed) return retval;
					if ( state.backtracking==0 ) {
					Int16_tree = (CommonTree)adaptor.create(Int16);
					adaptor.addChild(root_0, Int16_tree);
					}

					if ( state.backtracking==0 ) { retval.result = new Int(Integer.parseInt((Int16!=null?Int16.getText():null)), Int16.getLine()); }
					}
					break;
				case 2 :
					// src/nl/cwi/swat/liveql/parser/antlr/QL.g:54:5: Ident
					{
					root_0 = (CommonTree)adaptor.nil();


					Ident17=(Token)match(input,Ident,FOLLOW_Ident_in_primary326); if (state.failed) return retval;
					if ( state.backtracking==0 ) {
					Ident17_tree = (CommonTree)adaptor.create(Ident17);
					adaptor.addChild(root_0, Ident17_tree);
					}
